--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-widht, initial-scale= 1.0"/>
         <title>texto</title>
-        <link rel="stylesheet" href="css/style.css"
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
         <nav id="menu-h">
