--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-widht, initial-scale= 1.0"/>
-        <title>texto</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="css/style.css"/>
+        <title>dklsaoka</title>
     </head>
     <body>
         <nav id="menu-h">
             <ul>
-                <li>
-                    <a href="">Home</a>
-                </li>
+                <li><a href="">Home</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Quem somos</a></li>
                 <li><a href="">Contato</a></li>
