--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <body>
         <nav id="menu-h">
             <ul>
+                <img src="img.png" alt="logo" width="60px">
+
                 <li><a href="">Home</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Quem somos</a></li>
